# shapeshifter-library-python

./: .pylintrc  CHANGELOG.md  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml  run-tests.yml  test.yml
docs/: requirements.txt
docs/source/: cli.rst  concepts.rst  conf.py  index.rst
docs/source/api/: clients.rst  index.rst  services.rst  transport.rst  types.rst
docs/source/examples/: index.rst
examples/aggregator/: demo_aggregator.py
examples/aggregator/decoupled/: README.rst  run.sh
examples/aggregator/simple/: README.rst  simple_aggregator.py
examples/dso/: demo_dso.py
shapeshifter_uftp/: __init__.py  cli.py  exceptions.py  logging.py  oauth.py  token_manager.py  transport.py
shapeshifter_uftp/client/: __init__.py  agr_cro_client.py  agr_dso_client.py  base_client.py  cro_agr_client.py  cro_dso_client.py  dso_agr_client.py  dso_cro_client.py
shapeshifter_uftp/service/: __init__.py  agr_service.py  base_service.py  cro_service.py  dso_service.py
shapeshifter_uftp/uftp/: __init__.py  agr_cro.py  agr_dso.py  common.py  cro_dso.py  defaults.py  enums.py  metering.py  validations.py
shapeshifter_uftp/uftp/messages/: __init__.py  agr_portfolio_query.py  agr_portfolio_update.py  d_prognosis.py  dso_portfolio_query.py  dso_portfolio_update.py  flex_message.py  flex_offer.py  flex_offer_revocation.py  flex_order.py  flex_request.py  flex_reservation_update.py  flex_settlement.py  metering.py  payload_message.py  signed_message.py  test_message.py
test/: test_cli.py  test_client_errors.py  test_client_with_workers.py  test_clients_from_service.py  test_communications.py  test_default_responses.py  test_message_destination.py  test_oauth.py  test_oauth_token_unit.py  test_presence_of_client_methods.py  test_presence_of_service_methods.py  test_roundtrip_serialization.py  test_seal_and_unseal.py  test_service_errors.py  test_snake_case.py  test_ttl_cache.py  test_validations.py  test_xml_schema_compliance.py
test/helpers/: messages.py  services.py
